View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0028466 | Open CASCADE | OCCT:Visualization | public | 2017-02-16 23:55 | 2017-09-29 16:24 |
Reporter | kgv | Assigned To | bugmaster | ||
Priority | normal | Severity | feature | ||
Status | closed | Resolution | fixed | ||
Platform | Windows | OS | VC++ 2015 | ||
Target Version | 7.2.0 | Fixed in Version | 7.2.0 | ||
Summary | 0028466: Visualization, OpenGl_Context - read GPU memory using WGL_AMD_gpu_association extension | ||||
Description | Since Catalyst drivers do not provide GL_ATI_meminfo extension anymore, it might be useful to read at least total GPU memory size using WGL_AMD_gpu_association. | ||||
Steps To Reproduce | N/A | ||||
Tags | No tags attached. | ||||
Test case number | Not needed | ||||
|
Branch CR28466 has been created by kgv. SHA-1: e1c075f7b990c31a38ae72a4da45b42f125fea63 Detailed log of new commits: Author: kgv Date: Fri Feb 17 00:24:17 2017 +0300 0028466: Visualization, OpenGl_Context - read GPU memory using WGL_AMD_gpu_association extension |
|
Patch is ready for review. |
|
Branch CR28466 reviewed without remarks, ready for testing. |
|
Dear BugMaster, Branch CR28466 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested. SHA-1: e1c075f7b990c31a38ae72a4da45b42f125fea63 Number of compiler warnings: occt component: Linux: 0 (0 on master) Windows: 0 (0 on master) MasOS: 0 (0 on master) products component: Linux: 64 Windows: 0 MacOS: 1193 Regressions/Differences: Not detected Testing cases: Not needed Testing on Linux: Total MEMORY difference: 92988227 / 93188114 [-0.21%] Total CPU difference: 19890.310000000143 / 19801.800000000218 [+0.45%] Testing on Windows: Total MEMORY difference: 57832551 / 57829936 [+0.00%] Total CPU difference: 18620.107758898608 / 18793.846072598604 [-0.92%] |
|
Branch CR28466 has been deleted by inv. SHA-1: e1c075f7b990c31a38ae72a4da45b42f125fea63 |
Date Modified | Username | Field | Change |
---|---|---|---|
2017-02-16 23:55 | kgv | New Issue | |
2017-02-16 23:55 | kgv | Assigned To | => kgv |
2017-02-17 00:27 | git | Note Added: 0063860 | |
2017-02-17 00:27 | kgv | Note Added: 0063861 | |
2017-02-17 00:27 | kgv | Assigned To | kgv => san |
2017-02-17 00:27 | kgv | Status | new => resolved |
2017-02-23 14:50 | san | Note Added: 0063978 | |
2017-02-23 14:50 | san | Assigned To | san => bugmaster |
2017-02-23 14:50 | san | Status | resolved => reviewed |
2017-02-27 14:27 |
|
Assigned To | bugmaster => apv |
2017-02-28 10:51 |
|
Test case number | => Not needed |
2017-02-28 11:44 |
|
Note Added: 0064020 | |
2017-02-28 11:44 |
|
Assigned To | apv => bugmaster |
2017-02-28 11:44 |
|
Status | reviewed => tested |
2017-03-03 16:25 | bugmaster | Changeset attached | => occt master 2eacd0b8 |
2017-03-03 16:25 | bugmaster | Status | tested => verified |
2017-03-03 16:25 | bugmaster | Resolution | open => fixed |
2017-03-20 14:34 | git | Note Added: 0064480 | |
2017-09-29 16:21 |
|
Fixed in Version | => 7.2.0 |
2017-09-29 16:24 |
|
Status | verified => closed |