0028466: Visualization, OpenGl_Context - read GPU memory using WGL_AMD_gpu_association extension